--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scheduler-dashboard",
   "version": "0.1.0",
   "private": true,
+  
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
@@ -34,7 +35,7 @@
   "devDependencies": {
     "sass": "^1.53.0"
   },
-  "proxy": "http://localhost:8001",
+  "proxy": "http://localhost:8001/",
   "jest": {
     "watchPathIgnorePatterns": [
       "<rootDir>/node_modules/"
